Add guess generator to show potential guesses
Also, Josh Wardle -> NYT

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <p>
-      <a href="https://www.powerlanguage.co.uk/wordle/">Wordle</a> © <a href="https://www.powerlanguage.co.uk/">Josh Wardle</a>.
+      <a href="https://www.nytimes.com/games/wordle/">Wordle</a> © <a href="https://www.powerlanguage.co.uk">Josh Wardle</a> / <a href="https://www.nytimes.com">The New York Times</a>.
       <a href="https://github.com/carpeliam/wordle-draw">Wordle Draw</a> by <a href="http://www.carpeliam.com">Liam Morley</a>.
     </p>
   </body>
